# drone-object-geolocation

./: README.md  基于无人机吊舱单目相机的目标定位算法.md
drone_objlocation/: CMakeLists.txt  DroneObjlocationConfig.cmake.in
drone_objlocation/demo/: CMakeLists.txt  demo_geolocation.cpp
drone_objlocation/include/: drone_objlocation.h
drone_objlocation/src/: drone_objlocation.cpp
